Bug 1811471 - Merge Hiragana and Katakana scripts for text-shaping purposes, to allow kerning across both alphabets. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D167402